--- a/style.css
+++ b/style.css
@@ -1,33 +1,43 @@
 body {
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  /* flex-direction: column; */
-  align-items: center;
-  justify-content: center;
-  /* flex-wrap: wrap; */
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 button {
-    background-color: blue;
+    font-size: larger;
+    font-family: monospace;
+    background-color: rgb(84, 160, 246);
+    color: white;
     height: 50px;
     width: 100px;
-    justify-self: center;
-    align-self: start;
+    border-style: none;
+    border-radius: 15px;
 }
 
-#container{
+h1 {
+    color: #5e5d5d;
+    font: bolder;
+    font-family: monospace;
+}
+
+#grid-container {
+    display: flex;
+    flex-wrap: wrap;
+    aspect-ratio: 1/1;
+}
+
+#main-container {
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 500px;
-    width: 500px;
-    flex-wrap: wrap;
+    flex-direction: column;
     flex-grow: 1;
-
+    gap: 10px;
 }
 
-.sketch-box{
+.sketch-box {
     display: flex;
     background-color: white;
     border-width: 1px;
